--- a/esp32-s3-box-3.yaml
+++ b/esp32-s3-box-3.yaml
@@ -220,10 +220,10 @@ media_player:
 micro_wake_word:
   id: mww
   models:
-    - okay_nabu
-    - hey_mycroft
-    - hey_jarvis
-    - https://github.com/MagusFerri/CobaltHA/blob/main/models/cobalt.json
+    - model: okay_nabu
+    - model: hey_mycroft
+    - model: hey_jarvis
+    - model: https://github.com/MagusFerri/CobaltHA/blob/main/models/cobalt.json
   on_wake_word_detected:
     - voice_assistant.start:
         wake_word: !lambda return wake_word;
