--- a/esp32-s3-box-3.yaml
+++ b/esp32-s3-box-3.yaml
@@ -220,9 +220,9 @@ media_player:
 micro_wake_word:
   id: mww
   models:
-    - model: okay_nabu
-    - model: hey_mycroft
-    - model: hey_jarvis
+    - okay_nabu
+    - hey_mycroft
+    - hey_jarvis
   on_wake_word_detected:
     - voice_assistant.start:
         wake_word: !lambda return wake_word;
